--- a/main-lot-web/src/Homepage/Homepage.css
+++ b/main-lot-web/src/Homepage/Homepage.css
@@ -10,10 +10,10 @@
   }
   
   .main-section {
-    display: block;
+    display: flex;
     padding-bottom: 200px;
     color: white;
-    font-size: 200px; 
+    font-size: 100px; 
   }
   
   .bg-video{
@@ -113,3 +113,50 @@
     /* other formats include: 'woff2', 'truetype, 'opentype',
                               'embedded-opentype', and 'svg' */
   }
+
+  /* @media (max-width: 1440px) {
+    .main-section {
+      font-size: 80px; 
+    }
+  
+    .intro-text {
+      font-size: 90px; 
+      padding-left: 690px; 
+    }
+  
+    .Typewriter {
+      font-size: 80px; 
+    }
+  
+    .socials-title {
+      font-size: 90px; 
+    }
+  
+    .social-text {
+      font-size: 50px;
+    }
+  
+    .ti-pfp {
+      height: 400px; 
+      width: 800px;
+      padding-left: 100px; 
+    }
+  
+    .about-title {
+      font-size: 90px; 
+    }
+
+    .bg-video{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      padding-top: 90px;
+      top: 0.5;
+      left: 0;
+    }
+    .content-wrapper{
+      display: block;
+      float: left;
+
+    }
+  } */
