--- a/main-lot-web/src/Navbar/Navbar.css
+++ b/main-lot-web/src/Navbar/Navbar.css
@@ -7,7 +7,7 @@
   padding: 10px;
   height: 70px; /* Adjust the height as needed */
   border-color: black;
-  width: 100vw;
+  /* width: 100vw; */
 }
 
 /* Profile picture styles */
