added slideshow. still more work to do

--- a/main-lot-web/src/App.css
+++ b/main-lot-web/src/App.css
@@ -1,3 +1,16 @@
 .App {
   text-align: center;
 }
+
+body{
+  animation: fadeIn 1.5s;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
