--- a/main-lot-web/src/Homepage/Homepage.css
+++ b/main-lot-web/src/Homepage/Homepage.css
@@ -1,136 +1,160 @@
+.bg-wrapper {
+  background-color: black;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  animation: fadeIn 1.5s;
+  height: 100vh;
+  margin-top: 0;
+}
 
-  .bg-wrapper {
-    background-color: black;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    animation: fadeIn 1.5s;
-    height: 100vh;
-    margin-top: 0;
-  }
-  
-  .main-section {
-    /* display: flex; */
-    padding-bottom: 200px;
-    color: white;
-    font-size: 100px; 
-  }
-  
-  .bg-video{
-    position: absolute;
-    top: 0.5;
-    left: 0;
-    width: 100%;
-    height: 93%;
-    object-fit: cover; 
-    z-index: -0.3; 
-    animation: fadeIn 1.5s;
-    opacity: 0.3;
-  }
+.main-section {
+  /* display: flex; */
+  padding-bottom: 200px;
+  color: white;
+  font-size: 100px;
+}
 
-  .content-wrapper{
-    position: relative;
-    z-index: 1;
-    animation: slideIn 1s ease-in-out 0.5s;
-  }
+.bg-video {
+  position: absolute;
+  top: 0.5;
+  left: 0;
+  width: 100%;
+  height: 93%;
+  object-fit: cover;
+  z-index: -0.3;
+  animation: fadeIn 1.5s;
+  opacity: 0.3;
+}
 
-  .text-wrapper{
-    position: relative;
-    z-index: 2;
-  }
-  .intro-text{
-    color: #FFB6AD;
-    font-size: 110px;
-    padding-top: 340px;  
-    padding-left: 80px;  
-    margin: 0;
-    font-family: 'Open-Sans';
-  }
+.content-wrapper {
+  position: relative;
+  z-index: 1;
+  animation: slideIn 1s ease-in-out 0.5s;
+}
 
-  .Typewriter {
-    font-size: 100px;
-    color: white;
-    padding-left: 900px;
+.text-wrapper {
+  position: relative;
+  z-index: 2;
+}
+.intro-text {
+  color: #ffb6ad;
+  font-size: 110px;
+  padding-top: 340px;
+  padding-left: 80px;
+  margin: 0;
+  font-family: "Open-Sans";
+}
+
+.Typewriter {
+  font-size: 100px;
+  color: white;
+  padding-left: 900px;
+}
+
+.sponsor-section {
+  animation: slideIn 1s ease-in-out 0.5s;
+  display: block;
+}
+.sponsor-text {
+  font-size: 80px;
+  color: white;
+  font-family: "Open Sans";
+  padding-top: 30px;
+  animation: slideIn 1s ease-in-out 0.5s;
+}
+.sponsor-image-section {
+  display: flex;
+  justify-content: space-between;
+  animation: slideIn 1s ease-in-out 0.5s;
+  padding-left: 180px;
+  padding-right: 220px;
+}
+.gameradvantage-image {
+  height: 100px;
+}
+
+.ghost-image {
+  height: 100px;
+}
+
+.altcustoms-image {
+  height: 100px;
+}
+.social-section {
+  background-color: #ffb6ad;
+  height: 150vh;
+}
+
+.socials-title {
+  color: white;
+  font-size: 110px;
+  animation: slideIn 1s ease-in-out 0.5s;
+}
+.social-text {
+  color: white;
+  font-size: 45px;
+  margin: 0;
+  animation: slideIn 1s ease-in-out 0.5s;
+}
+
+.ti-pfp {
+  height: 500px;
+  width: 900px;
+  padding-left: 250px;
+  padding-top: 200px;
+  border-radius: 50px;
+  float: left;
+}
+
+.about-title {
+  color: #ffb6ad;
+  font-size: 110px;
+}
+
+.footer-section {
+  background-color: #ffb6ad;
+  height: 10vh;
+}
+
+.footer-text {
+  color: white;
+  font-family: "Open-Sans";
+  font-size: 22px;
+  padding-top: 20px;
+}
+
+.fade-in {
+  animation: fadeIn 1s ease-in;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
-
-  .social-section{
-    background-color:#FFB6AD;
-    height: 150vh;
-    }
-
-  .socials-title{
-    color: white;
-    font-size: 110px;
-    animation: slideIn 1s ease-in-out 0.5s;
-
+  to {
+    opacity: 1;
   }
-  .social-text{
-    color: white;
-    font-size: 45px;
-    margin: 0;
-    animation: slideIn 1s ease-in-out 0.5s;
+}
 
+@keyframes slideIn {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
   }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 
+@font-face {
+  font-family: "Open-Sans";
+  src: local("Open-Sans"),
+    url(../fonts/OpenSans-VariableFont_wdth\,wght.woff) format("woff");
+ }
 
-  .ti-pfp{
-    height: 500px;
-    width: 900px;
-    padding-left: 250px;
-    padding-top: 200px;
-    border-radius: 50px;
-    float: left;
-  }
-
-  .about-title{
-    color:#FFB6AD;
-    font-size: 110px;
-  }
-  
-  .footer-section{
-    background-color: #FFB6AD;
-    height: 10vh;
-  }
-
-  .footer-text{
-    color: white;
-    font-family: 'Open-Sans';
-    font-size: 22px;
-    padding-top: 20px;
-  }
-
-  .fade-in{
-    animation: fadeIn 1s ease-in;
-  }
-
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-
-  @keyframes slideIn {
-    0% {
-      transform: translateY(100%);
-      opacity: 0;
-    }
-    100% {
-      transform: translateY(0);
-      opacity: 1;
-    }
-  }
-  
-  @font-face {
-    font-family: 'Open-Sans';
-    src: local('Open-Sans'), url(../fonts/OpenSans-VariableFont_wdth\,wght.woff) format('woff');
-    /* other formats include: 'woff2', 'truetype, 'opentype',
-                              'embedded-opentype', and 'svg' */
-  }
-
-  /* @media (max-width: 1440px) {
+/* @media (max-width: 1440px) {
     .main-section {
       font-size: 80px; 
     }
